--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container py-5">
   <div class="row">
     <div class="col-11 mx-auto">
-      <h3>会員一覧</h3>
+      <h1><span>会員一覧</span></h1>
 
       <table class="table table-bordered">
         <div class="py-3">
-          <thead>
+          <thead class="thead-danger">
             <tr>
               <th>会員ID</th>
               <th>氏名</th>
