--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -4,7 +4,7 @@
       <div class="col-10">
         <div class="main-visual-cover mx-auto">
           <div class="main-visual">
-            <h3 class="mt-5 ml-5">ようこそ、えらんで えほんへ!</h3>
+            <h1 class="mt-5 ml-5">ようこそ、えらんで えほんへ!</h1>
             <p class="mt-5 ml-5">このサイトは、こどもの大好きな絵本をみつける<br>
             ママやパパのための<br>
             口コミ＆コミュニティサイトです。</p>
@@ -12,7 +12,7 @@
         </div>
         <br>
         <br>
-      <h3 class="mt-3 ml-5">新着絵本</h3>
+      <h2 class="mt-3 ml-5"><span>新着絵本</span></h2>
         <div class="d-flex justify-content-center" >
           <% @books.each do |book| %>
             <div class="mx-2 mb-4">
@@ -29,4 +29,4 @@
         </div>
       </div>
   </div>
-</div>  
+</div>
