--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,14 +1,16 @@
-<% if controller_name != 'sessions' %>
-<div class="search_form pe-3">
-  <%= search_form_for @q, url: search_path, class:"row justify-content-end" do |f| %>
-  <div class="col-md-4 p-0">
-    <%= f.search_field :name_cont, class:"form-control" %>
-  </div>
-  <div class="col-md-1 p-0">
-    <button class="btn btn-outline-success" type="submit">
-      <i class="fa-solid fa-magnifying-glass"></i>
-    </button>
-  </div>
+<div class="search_form">
+  <%= form_with url: search_path, local: true, method: :get do |f| %>
+      <%= f.text_field :word %>
+      <%= button_tag type: "submit", class: "btn-sm btn-dark" do %>
+        <i class="fas fa-search"></i> 検索</submit>
+      <% end %>
+
+      <%= select_tag :category_id,
+        options_from_collection_for_select(Category.all, :id, :name, params[:category_id]),
+          {
+            prompt: "タグで絞り込み検索",
+            onchange: "submit(this.form);"
+          }
+      %>
   <% end %>
 </div>
-<% end %>
