--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,28 +1,18 @@
-<div class="container">
-  <div class='row'>
-    <table class="table border table-hover table-inverse">
-      <% if @result == [] %>
-        <h3 class="mt-3 text-center">検索結果がありません。</h3>
-      <% elsif @book.present? %>
-      <% search_word = @q.name_cont %>
-    <h2 class="mt-3">検索結果 "<%= search_word %>"</h2>
-      <thead>
+<table class="table table-hover table-inverse">
+    <!--検索対象モデルがBookの時 -->
+    <thead>
+      <tr>
+        <th>タイトル</th>
+        <th>あらすじ</th>
+      </tr>
+    </thead>
+    <tbody>
+      <h2>Books search for "<%= @word %>"</h2>
+      <% @books.each do |book| %>
         <tr>
-          <th>表紙</th>
-          <th>絵本の名前</th>
-          <th colspan="3"></th>
+          <td><%= link_to book.title , book_path(book.id) %></td>
+          <td><%= book.item_caption %></td>
         </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <% @book.each do |f| %>
-          <td><%= image_tag f.image_url, style: "object-fit: fill; width: 180px; height: 120px;" %></td>
-          <td><%= link_to f.title, book_path(f.id) %></td>
-        </tr>
-        <% end %>
-      <% else %>
-        <h3 class="mt-3 text-center">検索結果がありません。</h3>
       <% end %>
-    </table>
-  </div>
-</div>
+    </tbody>
+</table>
