[Update] マイページ自己紹介追加、お気に入り一覧ページレイアウト調整

--- a/app/views/admin/members/edit.html.erb
+++ b/app/views/admin/members/edit.html.erb
@@ -25,6 +25,13 @@
             <td><%= f.text_field :email %></td>
             <td></td>
           </tr>
+
+          <tr>
+            <td>自己紹介</td>
+            <td><%= f.text_area :introduction , :size => "60x10" %></td>
+            <td></td>
+          </tr>
+
           <tr>
               <td>会員ステータス</td>
               <td>
