--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -18,6 +18,11 @@
   border-bottom: 2px solid rgba(59, 36, 11, 0.7) !important;
 }
 
+.table-bordered > tr > th {
+    border: 1px solid rgba(59, 36, 11, 0.7) !important;
+    color: #3B240B !important;
+}
+
 .btn-dark {
     border: 0 none;
     letter-spacing: 1px;
