--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -14,7 +14,7 @@
         <br>
       <h2 class="mt-3 ml-5"><span>新着絵本</span></h2>
         <div class="d-flex justify-content-center" >
-          <% @books.each do |book| %>
+          <% @new_books.each do |book| %>
             <div class="mx-2 mb-4">
               <br>
               <% if admin_signed_in? %>
@@ -30,7 +30,9 @@
                 <% end %>
 
               <% end %>
-                <p><%= book.title %></p>
+              <br>
+              <br>
+              <p><%= book.title %></p>
             </div>
           <% end %>
         </div>
