--- a/app/views/public/members/edit.html.erb
+++ b/app/views/public/members/edit.html.erb
@@ -23,6 +23,12 @@
           </tr>
 
           <tr>
+            <td>自己紹介</td>
+            <td><%= f.text_area :introduction , :size => "60x10" %></td>
+            <td></td>
+          </tr>
+
+          <tr>
             <td></td>
             <td><%= f.submit "編集内容を保存", class:"btn btn-dark" %>&ensp;<%= link_to "退会する", confirm_member_path(@member), class:"btn btn-danger" %></td>
           </tr>
