--- a/app/views/public/post_comments/_form.html.erb
+++ b/app/views/public/post_comments/_form.html.erb
@@ -1,7 +1,7 @@
 <% if member_signed_in? %>
   <%= form_with model: [book, post_comment], local: false do |f| %>
     <%= f.text_area :comment, rows:'5', placeholder: "おすすめコメントはこちら", class: "w-100", id: "comment_textarea" %>
-    <%= f.submit "送信" %>
+    <%= f.submit "送信", class: "btn btn-sm btn-dark" %>
   <% end %>
 <% else %>
   <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
