--- a/app/views/public/tagsearches/category_search.html.erb
+++ b/app/views/public/tagsearches/category_search.html.erb
@@ -1,13 +1,13 @@
 <div class="container pt-5 pb-5">
   <div class="row">
     <%= render "public/books/category", categories: @categories %>
-    <div class="col-md-10">
-      <h3 class="mt-3">検索結果</h3>
+    <div class="col-md-9">
+      <h2 class="mt-3"><span>検索結果</span></h2>
       <div class="search-books d-flex flex-wrap">
         <% @books.each do |book| %>
           <div class="mx-2 mb-4">
             <%= link_to book_path(book.id) do %>
-              <%= image_tag book.image_url, style: "object-fit: cover; width: 180px; height: 120px;" %>
+              <%= image_tag book.image_url, style: "object-fit: fill; width: 180px; height: 120px;" %>
             <% end %>
               <p><%= book.title %></p>
               <p><%= book.item_caption %></p>
