--- a/app/views/public/members/favorites.html.erb
+++ b/app/views/public/members/favorites.html.erb
@@ -8,15 +8,15 @@
         <br>
         <br>
         <br>
-        <h2><span>登録情報</span></h2>
+        <h2><strong>プロフィール</strong></h2>
       </div>
       <table class="table table-bordered">
         <tr>
-          <td style="width: 30%">ニックネーム</td>
+          <td style="width: 40%">ニックネーム</td>
           <td><%= @member.nickname %></td>
         </tr>
         <tr>
-          <td style="width: 30%">自己紹介</td>
+          <td style="width: 40%">自己紹介</td>
           <td><%= @member.introduction %></td>
         </tr>
       </table>
