--- a/app/views/public/books/index.html.erb
+++ b/app/views/public/books/index.html.erb
@@ -22,3 +22,29 @@
     </div>
   </div>
 </div>
+<div class="wrapper">
+  <ul class="tab-menu">
+    <li class="<%= 'active' unless @category %>"><%= link_to '全て', books_path %></li>
+    <!--タブに表示されたカテゴリー名に紐づく投稿を一覧表示-->
+    <% @categories.each do |category| %>
+      <li class="<%= 'active' if category == @category %>"><%= link_to category.name, books_path(category: category.name) %></li>
+    <% end %>
+  </ul>
+
+  <div class="tab-contents">
+    <div class="tab-area is-active">
+      <div class="row">
+      <!--一覧-->
+        <div class="col-md-12">
+          <%= render 'index', books: @books %>
+          <div class="row justify-content-center my-2">
+            <%= paginate @books %>
+          </div>
+        </div>
+
+      </div>
+      <!--Top-pageリンク-->
+      <p id="page-top"><a href="#">Page Top</a></p>
+    </div>
+  </div>
+</div>
