--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -6,7 +6,7 @@
       <% end %>
 
       <%= select_tag :category_id,
-        options_from_collection_for_select(Category.all, :id, :name, params[:category_id]),
+        options_from_collection_for_select(Category.all, :id, :name),
           {
             prompt: "カテゴリで絞り込み検索",
             onchange: "submit(this.form);"
