--- a/app/views/public/books/_index.html.erb
+++ b/app/views/public/books/_index.html.erb
@@ -1,9 +1,9 @@
 <div class="card-list-container py-5">
   <div class="d-flex justify-content-center" >
     <% books.each do |book| %>
-      <div class="mx-2 mb-4 shadow-lg">
+      <div class="mx-2 mb-4 shadow-lg" style="width: 200px;">
         <%= link_to book_path(book.id) do %>
-          <%= image_tag book.image_url, class:"card-img-top", style: "object-fit: fill; width: 180px; height: 120px;" %>
+          <%= image_tag book.image_url, class:"card-img-top", style: "object-fit: fill; width: 200px; height: 120px;" %>
         <% end %>
         <div class="card-body">
           <p class="card-title"><strong>絵本の名前：<%= book.title %></strong></p>
