--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,18 +1,7 @@
-<table class="table table-hover table-inverse">
-    <!--検索対象モデルがBookの時 -->
-    <thead>
-      <tr>
-        <th>タイトル</th>
-        <th>あらすじ</th>
-      </tr>
-    </thead>
-    <tbody>
-      <h2>Books search for "<%= @word %>"</h2>
-      <% @books.each do |book| %>
-        <tr>
-          <td><%= link_to book.title , book_path(book.id) %></td>
-          <td><%= book.item_caption %></td>
-        </tr>
-      <% end %>
-    </tbody>
-</table>
+<div class="container pt-5 pb-5">
+  <div class="row">
+    <div class="col-md-9">
+      <%= render "public/searches/search" , books: @books %>
+    </div>
+  </div>
+</div>
