--- a/app/views/public/tagsearches/category_search.html.erb
+++ b/app/views/public/tagsearches/category_search.html.erb
@@ -2,21 +2,7 @@
   <div class="row">
     <%= render "public/books/category", categories: @categories %>
     <div class="col-md-9">
-      <h2 class="mt-3"><span>検索結果</span></h2>
-      <div class="search-books d-flex flex-wrap">
-        <% @books.each do |book| %>
-          <div class="mx-2 mb-4">
-            <%= link_to book_path(book.id) do %>
-              <%= image_tag book.image_url, style: "object-fit: fill; width: 180px; height: 120px;" %>
-            <% end %>
-              <p><%= book.title %></p>
-              <p><%= book.item_caption %></p>
-          </div>
-        <% end %>
-      </div>
-      <div class="row justify-content-center">
-        <%= paginate @books %>
-      </div>
+    <%= render "public/searches/search" , books: @books %>
     </div>
   </div>
 </div>
