--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -146,3 +146,15 @@ h2 span {
   height: auto; /* 高さは自動調整 */
   background-position: center; /* 背景画像を中央に配置 */
 }
+
+
+#back {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+.arrow{
+  width:      50px;
+  height:     50px;
+}
+
