--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,10 +2,7 @@
   <div class="main-visual">
     <div class="image-container">
       <%= image_tag 'erande_ehon_top.png' %>
-    </div>  
-    <h1 class="mt-5 ml-5">ようこそ、えらんで えほんへ!</h1>
-    <p class="mt-5 ml-5">このサイトは、お子さまの大好きな絵本をみつける<br>
-    ママやパパのためのサイトです。</p>
+    </div>
   </div>
 </div>
 <div class="container pt-5 pb-5">
@@ -14,7 +11,7 @@
       <%= render "public/books/category", categories: @categories %>
     </div>
     <div class="col-10">
-      
+
       <br>
       <br>
     <h2 class="mt-3 ml-5"><span>新着絵本</span></h2>
@@ -113,8 +110,15 @@
         </div>
       <div class="row justify-content-end">
         <i class="fa-solid fa-book mt-1 mr-1"></i>
-          <%= link_to '全てのえほんを見る>', books_path, class: "text-reset" %>
+        <%= link_to '全てのえほんを見る>', books_path, class: "text-reset" %>
       </div>
+      <div class="row justify-content-end">
+        <span id="back">
+          <a href="">
+            <%= image_tag ('pagetop.png'), data: {"turbolinks"=>false}, class: "arrow" %>
+          </a>
+        </span>
+      </div>  
     </div>
   </div>
 </div>
