--- a/app/views/admin/books/confirm.html.erb
+++ b/app/views/admin/books/confirm.html.erb
@@ -1,25 +1,27 @@
 <div class="container p-3">
   <div class="row">
     <div class="col-10">
-      <div class="row">
-        <h3>下書き一覧</h3>
-          <div class="row justify-content-end mb-3">
-            <div class="col-2">
-              <div class="d-flex flex-wrap">
-                <% @books.each do |book| %>
-                <div class="mx-2 mb-4">
-                  <%=link_to admin_book_path(book.id) do %>
-                    <%= image_tag book.image_url, style: "object-fit: cover; width: 180px; height: 120px;" %>
-                  <% end %>
-                  <%= book.title %> <br>
-                  <%= book.item_caption %>
-                <% end %>
-                </div>
-              </div>
-            </div>
+      <h2><span>下書き一覧</span></h2>
+        <div class="d-flex flex-wrap">
+          <% @books.each do |book| %>
+          <div class="mx-2 mb-4">
+            <br>
+            <%=link_to admin_book_path(book.id) do %>
+              <%= image_tag book.image_url, style: "object-fit: cover; width: 180px; height: 120px;" %>
+            <% end %>
+            <br>
+            <strong>絵本の名前：<%= book.title %></strong> <br>
+            あらすじ：<%= book.item_caption %>
+          <% end %>
+          </div>
         </div>
-      </div>
     </div>
   </div>
-  <%=link_to "公開済みの一覧へ戻る", admin_books_path %>
+</div>
+<div class="container p-3">
+  <div class="row">
+    <div class="col-10">
+      <%=link_to "公開済みの一覧へ戻る", admin_books_path, class: "mb-2;", style: "font-size: 15px;" "color: #3B240B" %>
+    </div>
+  </div>
 </div>
