--- a/app/views/admin/books/show.html.erb
+++ b/app/views/admin/books/show.html.erb
@@ -1,58 +1,59 @@
 
-<div class="container py-5">
-  <h2>絵本の詳細</h2>
-    <div class="row justify-content-center">
-      <%= image_tag @book.image_url + "?_ex=250x250" %>
-    	<table class='table'>
-  		  <tr>
-  		    <td>絵本の名前</td>
-          <td><%= @book.title %></td>
-          <td></td>
-        </tr>
-        <tr>
-  		    <td>絵本の作者</td>
-          <td><%= @book.author %></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>あらすじ</td>
-          <td><%= simple_format(@book.item_caption) %></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>カテゴリ</td>
-          <td>
-              <% @book.categories.each do |category| %>
-                <%= category.name %> &emsp; <!-- カテゴリ名とスペースを追加 -->
-              <% end %>
-          </td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>コメント件数：<span id="comment_count"><%= @book.post_comments.count %></span></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <div id="comment_index">
-          <% @book.post_comments.each do |post_comment| %>
-          <tr>
-            <td><%= post_comment.member.nickname %>さんのコメント：</td>
-            <td><%= post_comment.comment %></td>
-            <td>
-              <%= link_to "削除", book_post_comment_path(@book, post_comment), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-sm btn-danger float-end", remote: true %>
-            </td>
-          </tr>
-          <% end %>
-        </div>
-      </td>
-    </tr>
-  </table>
 
-    </div>
-    <div class="row justify-content-center">
-      <%= link_to '編集する', edit_admin_book_path(@book), class: "btn btn-dark px-4" %>
-      &emsp;
-      <%= link_to "削除する", admin_book_path(@book), class: "btn btn-danger px-4", method: :delete, data: { confirm: '本当に削除しますか？' } %>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-8">
+      <h2>絵本の詳細</h2>
+        <div class="row justify-content-center">
+          <%= image_tag @book.image_url + "?_ex=250x250" %>
+        	<table class='table'>
+      		  <tr>
+      		    <td>絵本の名前</td>
+              <td><%= @book.title %></td>
+              <td></td>
+            </tr>
+            <tr>
+      		    <td>絵本の作者</td>
+              <td><%= @book.author %></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>あらすじ</td>
+              <td><%= simple_format(@book.item_caption) %></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>カテゴリ</td>
+              <td>
+                  <% @book.categories.each do |category| %>
+                    <%= category.name %> &emsp; <!-- カテゴリ名とスペースを追加 -->
+                  <% end %>
+              </td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>コメント件数：<span id="comment_count"><%= @book.post_comments.count %></span></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <div id="comment_index">
+              <% @book.post_comments.each do |post_comment| %>
+              <tr>
+                <td><%= post_comment.member.nickname %>さんのコメント：</td>
+                <td><%= post_comment.comment %></td>
+                <td>
+                  <%= link_to "削除", book_post_comment_path(@book, post_comment), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-sm btn-danger float-end", remote: true %>
+                </td>
+              </tr>
+              <% end %>
+            </div>
+          </table>
+        </div>
+        <div class="row justify-content-center">
+          <%= link_to '編集する', edit_admin_book_path(@book), class: "btn btn-dark px-4" %>
+          &emsp;
+          <%= link_to "削除する", admin_book_path(@book), class: "btn btn-danger px-4", method: :delete, data: { confirm: '本当に削除しますか？' } %>
+        </div>
     </div>
   </div>
 </div>
