--- a/app/views/public/searches/_search.html.erb
+++ b/app/views/public/searches/_search.html.erb
@@ -3,11 +3,21 @@
     <% books.each do |book| %>
       <div class="mx-2 mb-4">
         <br>
-        <%= link_to book_path(book.id) do %>
-          <%= image_tag book.image_url, style: "object-fit: fill; width: 180px; height: 120px;" %>
+        <% if admin_signed_in? %>
+
+          <%= link_to admin_book_path(book.id) do %>
+            <%= image_tag book.image_url, style: "object-fit: fill; width: 180px; height: 120px;" %>
+          <% end %>
+
+        <% else %>
+
+          <%= link_to book_path(book.id) do %>
+            <%= image_tag book.image_url, style: "object-fit: fill; width: 180px; height: 120px;" %>
+          <% end %>
+
         <% end %>
-          <p><strong><%= book.title %></strong></p>
-          <p><%= book.item_caption %></p>
+        <p><strong><%= book.title %></strong></p>
+        <p><%= book.item_caption %></p>
       </div>
     <% end %>
   </div>
