--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -9,7 +9,6 @@
         <br>
         <br>
         <h2><span>登録情報</span></h2>
-        <%= link_to "編集する", edit_member_path, class:"btn btn-dark ml-5" %>
       </div>
       <table class="table table-bordered">
         <tr>
@@ -33,6 +32,7 @@
         </tr>
 
       </table>
+      <%= link_to "編集する", edit_member_path, class:"btn btn-dark " %>
     </div>
     <div class="col-8">
       <div class="row">
