--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="mt-auto footer py-3" style="background-color: #A2D188">
   <div class="container-fluid">
     <div class="row">
-      <div class="mx-auto">
+      <div class="mx-auto" style="color:#3B240B">
         <p>CopyRight c 2023 ERANDE EHON co,.ltd. All Rights Reserved.</p>
       </div>
     </div>
