--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,6 +1,6 @@
 <div class="search_form">
   <%= form_with url: search_path, local: true, method: :get do |f| %>
-      <%= f.text_field :word %>
+      <%= f.text_field :word, placeholder:"タイトルを入力" %>
       <%= button_tag type: "submit", class: "btn-sm btn-dark" do %>
         <i class="fas fa-search"></i> 検索</submit>
       <% end %>
