--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,7 +1,7 @@
 <div class="container pt-5 pb-5">
   <div class="row">
     <div class="col-12 text-center">
-      <h1 style="font-size:30px">ようこそ 「えらんで　えほん」へ</h1>
+      <p class="about-title text-center" style="font-size:30px"><span>ようこそ 「えらんで　えほん」へ</span></p>
       <br>
       <br>
       <p style="font-size:15px;">
