--- a/app/views/public/members/edit.html.erb
+++ b/app/views/public/members/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h3 class="my-5">会員情報編集</h3>
+      <h1 class="my-5"><span>会員情報編集</span></h1>
 
         <%= form_with model:@member, local:true do |f| %>
         <%= render 'layouts/error', obj: @member %>
