--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -75,6 +75,9 @@ h1 span {
 .api_search {
   font-size: 15px;
 }
+.api_search span {
+  background: linear-gradient(transparent 80%, #A0DAEA 80%);
+}
 h2 {
   font-size: 20px;
 }
