--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -32,7 +32,10 @@
         </tr>
 
       </table>
-      <%= link_to "編集する", edit_member_path, class:"btn btn-dark " %>
+      <% if @member.email != "guest@example.com" %>
+        <%= link_to "編集する", edit_member_path, class:"btn btn-dark " %>
+      <% end %>
+
     </div>
     <div class="col-8">
       <div class="row">
